# fine-tuning

./: .gitignore  README.md  data_cleaning.ipynb  finetune_gpt2.py  main.py  pretrain_classifier.py  pyproject.toml  train_classifier.py
src/: utils.py
src/lightning_modules/: lit_classification_datamodule.py  lit_classifier.py  lit_completion_datamodule.py  lit_transformer.py
src/lightning_modules/callbacks/: log_test_samples.py
src/torch_modules/: classification.py  generation.py
