[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "jupyter>=1.1.1",
    "lightning>=2.5.6",
    "nlp-agh",
    "optuna>=4.6.0",
    "optuna-integration[pytorch-lightning]>=4.6.0",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]

[tool.uv.sources]
nlp-agh = { git = "https://github.com/patrykkozuch/NLP_AGH.git" }
