[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "cleanlab>=2.7.1",
    "datasets<4.0.0",
    "jupyter>=1.1.1",
    "lightning>=2.5.6",
    "nlp-agh",
    "optuna>=4.6.0",
    "optuna-integration[pytorch-lightning]>=4.6.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tokenizers>=0.22.1",
    "transformers>=4.57.3",
    "wandb>=0.23.0",
]

[tool.uv.sources]
nlp-agh = { git = "https://github.com/patrykkozuch/NLP_AGH.git" }
